--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ footer:
 # Available values of license: by | by-nc | by-nc-nd | by-nc-sa | by-nd | by-sa | zero
 # You can set a language value if you prefer a translated version of CC license.
 # CC licenses are available in 39 languages, where you can find the specific and correct abbreviation you need.
-# Valid values of language: deed.zh, deed.fr, deed.de , etc.
+# Valid values of language: deed.zh, deed.fr, deed.de, etc.
 creative_commons:
   license: by-nc-sa
   sidebar: false
@@ -390,14 +390,15 @@ cheers: true
 
 # TagCloud settings for tags page.
 tagcloud:
-  # If true, font size and color can be customized
+  # If true, font size, font color and amount of tags can be customized
   enable: false
 
   # All values below are same as default, change them by yourself
   min: 12 # min font size in px
   max: 30 # max font size in px
-  start: '#ccc' # start color (hex, rgba, hsla or color keywords)
-  end: '#111' # end color (hex, rgba, hsla or color keywords)
+  start: "#ccc" # start color (hex, rgba, hsla or color keywords)
+  end: "#111" # end color (hex, rgba, hsla or color keywords)
+  amount: 200 # amount of tags, chage it if you have more than 200 tags
 
 
 # ---------------------------------------------------------------
@@ -458,6 +459,7 @@ font:
 # ---------------------------------------------------------------
 # Third Party Services Settings
 # See: https://theme-next.org/docs/third-party-services/
+# You may need to install dependencies or set CDN urls in `vendors`
 # ---------------------------------------------------------------
 
 # Math Equations Render Support
@@ -486,7 +488,7 @@ math:
   # hexo-renderer-markdown-it-plus (or hexo-renderer-markdown-it with markdown-it-katex plugin) needed to full Katex support.
   katex:
     # Use 0.7.1 as default, jsdelivr as default CDN, works everywhere even in China
-    cdn: //cdn.jsdelivr.net/npm/katex@0.7.1/dist/katex.min.css
+    cdn: //cdn.jsdelivr.net/npm/katex@0/dist/katex.min.css
     # CDNJS, provided by cloudflare, maybe the best CDN, but not works in China
     #cdn: //cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css
 
@@ -519,10 +521,8 @@ quicklink:
 
   # Default (true) will initialize quicklink after the load event fires
   delay: true
-
   # Custom a time in milliseconds by which the browser must execute prefetching
   timeout: 3000
-
   # Default (true) will enable fetch() or falls back to XHR
   priority: true
 
@@ -572,6 +572,7 @@ valine:
   avatar: mm # gravatar style
   guest_info: nick,mail,link # custom comment header
   pageSize: 10 # pagination size
+  language: # language, available values: en, zh-cn
   visitor: false # leancloud-counter-security is not supported for now. When visitor is set to be true, appid and appkey are recommended to be the same as leancloud_visitors' for counter compatibility. Article reading statistic https://valine.js.org/visitor.html
   comment_count: true # if false, comment count will only be displayed in post page, not in home page
 
@@ -608,7 +609,7 @@ gitalk:
   distraction_free_mode: true # Facebook-like distraction free mode
   # Gitalk's display language depends on user's browser or system environment
   # If you want everyone visiting your site to see a uniform language, you can set a force language value
-  # Available value: en, es-ES, fr, ru, zh-CN, zh-TW
+  # Available values: en, es-ES, fr, ru, zh-CN, zh-TW
   language:
 
 # Baidu Share
@@ -620,6 +621,24 @@ gitalk:
 # AddThis Share, See: https://www.addthis.com
 # Go to https://www.addthis.com/dashboard to customize your tools.
 #add_this_id:
+
+# Likely Share
+# See: https://ilyabirman.net/projects/likely/
+# Likely supports four looks, nine social networks, any button text
+# You are free to modify the text value and order of any network
+likely:
+  enable: false
+  look: normal # available values: normal, light, small, big
+  networks:
+    twitter: Tweet
+    facebook: Share
+    linkedin: Link
+    gplus: Plus
+    vkontakte: Share
+    odnoklassniki: Class
+    telegram: Send
+    whatsapp: Send
+    pinterest: Pin
 
 # NeedMoreShare2
 # Dependencies: https://github.com/theme-next/theme-next-needmoreshare2
@@ -652,9 +671,9 @@ needmoreshare2:
 #google_site_verification:
 
 # Google Analytics
-# google_analytics:
-#   tracking_id:
-#   localhost_ignored: true
+#google_analytics:
+#  tracking_id:
+#  localhost_ignored: true
 
 # Bing Webmaster tools verification setting
 # See: https://www.bing.com/webmaster
@@ -852,11 +871,20 @@ pdf:
     # CDNJS, provided by cloudflare, maybe the best CDN, but not works in China
     #cdn: //cdnjs.cloudflare.com/ajax/libs/pdfobject/2.1.1/pdfobject.min.js
 
+# Mermaid tag
+mermaid:
+  enable: false
+  # Available themes: default | dark | forest | neutral
+  theme: forest
+  # Use 8.0.0 as default, jsdelivr as default CDN, works everywhere even in China
+  cdn: //cdn.jsdelivr.net/npm/mermaid@8/dist/mermaid.min.js
+  # CDNJS, provided by cloudflare, maybe the best CDN, but not works in China
+  #cdn: //cdnjs.cloudflare.com/ajax/libs/mermaid/8.0.0/mermaid.min.js
 
-#! ---------------------------------------------------------------
-#! DO NOT EDIT THE FOLLOWING SETTINGS
-#! UNLESS YOU KNOW WHAT YOU ARE DOING
-#! ---------------------------------------------------------------
+
+# ---------------------------------------------------------------
+# Animation Settings
+# ---------------------------------------------------------------
 
 # Use velocity to animate everything.
 motion:
@@ -878,16 +906,16 @@ motion:
     sidebar: slideUpIn
 
 # Fancybox. There is support for old version 2 and new version 3.
-# Choose only any one variant, do not need to install both.
+# Choose only one variant, do not need to install both.
 # To install 2.x: https://github.com/theme-next/theme-next-fancybox
 # To install 3.x: https://github.com/theme-next/theme-next-fancybox3
 fancybox: false
 
-# Added switch option for separated repo in 6.0.0.
+# Polyfill to remove click delays on browsers with touch UIs.
 # Dependencies: https://github.com/theme-next/theme-next-fastclick
 fastclick: false
 
-# Added switch option for separated repo in 6.0.0.
+# Vanilla JavaScript plugin for lazyloading images.
 # Dependencies: https://github.com/theme-next/theme-next-jquery-lazyload
 lazyload: false
 
@@ -930,9 +958,14 @@ canvas_ribbon:
   alpha: 0.6
   zIndex: -1
 
-# Script Vendors.
-# Set a CDN address for the vendor you want to customize.
-# See: https://theme-next.org/docs/advanced-settings/
+
+#! ---------------------------------------------------------------
+#! DO NOT EDIT THE FOLLOWING SETTINGS
+#! UNLESS YOU KNOW WHAT YOU ARE DOING
+#! See: https://theme-next.org/docs/advanced-settings/
+#! ---------------------------------------------------------------
+
+# Script Vendors. Set a CDN address for the vendor you want to customize.
 # For example
 #   jquery: https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js
 # Be aware that you would better use the same version as internal ones to avoid potential problems.
@@ -981,13 +1014,6 @@ vendors:
   velocity:
   velocity_ui:
 
-  # Internal version: 0.7.9
-  # See: https://faisalman.github.io/ua-parser-js
-  # Example:
-  # ua_parser: //cdn.jsdelivr.net/npm/ua-parser-js@0/src/ua-parser.min.js
-  # ua_parser: //cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.9/ua-parser.min.js
-  ua_parser:
-
   # Internal version: 4.6.2
   # See: https://fontawesome.com
   # Example:
@@ -995,7 +1021,7 @@ vendors:
   # fontawesome: //cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.2/css/font-awesome.min.css
   fontawesome:
 
-  # Internal version: 2.4.1
+  # Internal version: 2.10.4
   # See: https://www.algolia.com
   # Example:
   # algolia_instant_js: //cdn.jsdelivr.net/npm/instantsearch.js@2/dist/instantsearch.js
@@ -1046,16 +1072,17 @@ vendors:
   # han: //cdnjs.cloudflare.com/ajax/libs/Han/3.3.0/han.min.css
   han:
 
-  # Internal version: 3.3.0
+  # Internal version: 4.0.7
   # See: https://github.com/vinta/pangu.js
   # Example:
-  # pangu: //cdn.jsdelivr.net/npm/pangu@3/dist/browser/pangu.min.js
-  # pangu: //cdnjs.cloudflare.com/ajax/libs/pangu/3.3.0/pangu.min.js
+  # pangu: //cdn.jsdelivr.net/npm/pangu@4/dist/browser/pangu.min.js
+  # pangu: //cdnjs.cloudflare.com/ajax/libs/pangu/4.0.7/pangu.min.js
   pangu:
 
+  # Internal version: 1.0.0
   # See: https://github.com/GoogleChromeLabs/quicklink
   # Example:
-  # quicklink: //cdn.jsdelivr.net/npm/quicklink@1.0.0/dist/quicklink.umd.js
+  # quicklink: //cdn.jsdelivr.net/npm/quicklink@1/dist/quicklink.umd.js
   quicklink:
 
   # Internal version: 1.0.0
@@ -1091,19 +1118,23 @@ vendors:
   # valine: //cdnjs.cloudflare.com/ajax/libs/valine/1.3.4/Valine.min.js
   valine:
 
-  # gitalk
-  # See: https://github.com/gitalk/gitalk
+  # gitalk & js-md5
+  # See: https://github.com/gitalk/gitalk, https://github.com/emn178/js-md5
   # Example:
   # gitalk_js: //cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js
   # gitalk_css: //cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css
+  # md5: //cdn.jsdelivr.net/npm/js-md5@0/src/md5.min.js
   gitalk_js:
   gitalk_css:
-
-  # js-md5
-  # See: https://github.com/emn178/js-md5
-  # Example:
-  # md5: //cdn.jsdelivr.net/npm/js-md5@0/src/md5.min.js
   md5:
+
+  # likely
+  # See: https://github.com/ilyabirman/Likely
+  # Example:
+  # likely_js: //cdn.jsdelivr.net/npm/ilyabirman-likely@2/release/likely.js
+  # likely_css: //cdn.jsdelivr.net/npm/ilyabirman-likely@2/release/likely.css
+  likely_js:
+  likely_css:
 
 # Assets
 css: css
